idf_component_register(
    SRCS
        sabre/factory.cpp
        sabre/gpio/input_gpio.cpp
        sabre/uart/uart_output_stream_buffer.cpp
        sabre/logging/logging.cpp
        sabre/logging/log_handlers.cpp
        sabre/generic/ipv4_address.cpp
        sabre/utility/timed_waiter.cpp
        sabre/service_runner/service_runner.cpp
        sabre/clients/mqtt.cpp
    INCLUDE_DIRS
        "."
)
