idf_component_register(
    SRCS
        sabre_esp32/uart/uart.cpp
        sabre_esp32/gpio/input_gpio.cpp
        sabre_esp32/gpio/output_gpio.cpp
        sabre_esp32/wifi/wifi_station.cpp
        sabre_esp32/wifi/wifi_soft_ap.cpp
        sabre_esp32/wifi/wifi.cpp
        sabre_esp32/esp32_factory.cpp
        sabre_esp32/utility/timed_waiter.cpp
        sabre_esp32/service_runner/service_runner.cpp
        sabre_esp32/clients/mqtt_client.cpp
    INCLUDE_DIRS
        "." 
    PRIV_REQUIRES
        sabre
    REQUIRES
        esp_driver_uart
        esp_driver_gpio
        esp_wifi
        nvs_flash
        esp_timer
        mqtt
)
